WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
79261
[BlackBerry] InputHandler has signed vs unsigned comparison.
https://bugs.webkit.org/show_bug.cgi?id=79261
Summary
[BlackBerry] InputHandler has signed vs unsigned comparison.
Mike Fenton
Reported
2012-02-22 11:06:53 PST
InputHandler::rectForCaret generates a warning for a comparison between signed and unsigned ints.
Attachments
Patch
(1.93 KB, patch)
2012-02-22 11:13 PST
,
Mike Fenton
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Mike Fenton
Comment 1
2012-02-22 11:13:15 PST
Created
attachment 128250
[details]
Patch
Rob Buis
Comment 2
2012-02-22 11:18:45 PST
Comment on
attachment 128250
[details]
Patch LGTM.
WebKit Review Bot
Comment 3
2012-02-22 12:15:22 PST
Comment on
attachment 128250
[details]
Patch Clearing flags on attachment: 128250 Committed
r108535
: <
http://trac.webkit.org/changeset/108535
>
WebKit Review Bot
Comment 4
2012-02-22 12:15:26 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug