[BlackBerry] InputHandler has signed vs unsigned comparison. https://bugs.webkit.org/show_bug.cgi?id=79261

Fix warning by casting the unsigned int to an int.

Patch by Mike Fenton <mifenton@rim.com> on 2012-02-22
Reviewed by Rob Buis.

* WebKitSupport/InputHandler.cpp:
(BlackBerry::WebKit::InputHandler::rectForCaret):

Canonical link: https://commits.webkit.org/96328@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@108535 268f45cc-cd09-0410-ab3c-d52691b4dbfc